Fixed image scaling issues, introduced "stretch" option

--- a/jquery.billboard.css
+++ b/jquery.billboard.css
@@ -10,10 +10,7 @@
 
 .billboard img {
 	border: none;
-	display: block;
-	width: 100%;
-	height: auto;
-	margin: 0 auto;
+	display: inline-block;
 }
 
 .billboard > .aspect-ratio {
@@ -33,36 +30,49 @@
 
 .billboard > ul > li {
 	position: absolute;
-	width: 100%; 
-	min-width: 100%;
-	max-width: 100%;
+	width: 100%;
 	height: 100%; 
-	min-height: 100%;
-	max-height: 100%;
 	text-align: center;
 	display: none;
 	float: left;
 }
 
+.billboard > ul > li:before {
+	content: "";
+	display: inline-block;
+	height: 100%;
+	vertical-align: middle;
+}
+
 .billboard > ul > li > img,
 .billboard > ul > li > a > img {
-	margin: 0 auto;
+  max-width: 100%;
+  height: auto;
+  max-height: 100%;
+  vertical-align: middle;
 }
 
-.billboard.billboard-portrait > ul > li > img,
-.billboard.billboard-portrait > ul > li > a > img {
+.billboard > ul > li > a {
+	display: inline-block;
+}
+
+.billboard.billboard-stretch > ul > li > img,
+.billboard.billboard-stretch > ul > li > a > img {
+  width: 100%;
+}
+
+.billboard.billboard-stretch > ul > li > a {
+	width: 100%;
+	height: 100%;
+}
+
+.billboard.billboard-stretch > ul > li.billboard-portrait > img,
+.billboard.billboard-stretch > ul > li.billboard-portrait > a > img {
 	margin: 0 auto;
 	width: auto;
+	height: 100%;
 	max-width: 100%;
 	max-height: 100%;
-}
-
-.billboard.billboard-autosize > ul > li {
-	height: auto;
-}
-
-.billboard.billboard-activated > ul > li {
-	display: block;
 }
 
 .billboard .billboard-footer {
@@ -72,6 +82,7 @@
 	bottom: 0;
 	right: 0;
 	background: rgba(0,0,0, 0.5);
+	border-top: solid 1px rgba(55,55,55, 0.65);
 	z-index: 1000;
 }
 
@@ -99,6 +110,7 @@
 	opacity: 0.25;
 	filter: alpha(opacity=25);
 	cursor: pointer;
+	display: inline-block;
 }
 
 .billboard .billboard-styled a.dot {
@@ -112,7 +124,7 @@
 
 .billboard .billboard-styled a.control {
 	border-radius: 0.7em;	
-	margin: 0.3em 0 -0.2em 0.25em;
+	margin: 0.3em 0 -0.1em 0.25em;
 	text-decoration: none;
 	color: black;
 	padding: 0 0.5em;
